# rag_langchain

./: .gitignore  README.md  local_rag_ollama.ipynb  pyproject.toml  simple_rag_langchain.ipynb
sample_data/: notes.txt
